# langpy

./: .gitignore  CURRENT_STATUS.md  FINAL_SUMMARY.md  FIXES_COMPLETE.md  INSTALLATION.md  INSTALL_GUIDE.md  MANIFEST.in  MEMORY_FIX_SUMMARY.md  OPERATOR_COMPLETION_PLAN.md  OPERATOR_IMPLEMENTATION_COMPLETE.md  README.md  TEST_RESULTS.md  THREAD_FIX_SUMMARY.md  ai_agency_with_workflow.py  demo_agency.py  pyproject.toml  requirements-core.txt  requirements.txt  test_installation.py  test_memory.py  test_operators.py  test_operators_execution.py  test_thread.py
agent/: __init__.py  async_agent.py  sync_agent.py
chunker/: __init__.py  async_chunker.py  base.py  chunker_full_copy.py  sync_chunker.py
docs/: AGENT_ARCHITECTURES.md  GAPS_AND_SOLUTIONS.md  GETTING_STARTED.md  LANGPY_COMPREHENSIVE_ANALYSIS.md  OPERATORS.md  TESTING.md  agent_execution_flow.md  agent_sdk_options.md  agent_sdk_usage_guide.md  chunker_sdk_options.md  embed_sdk_options.md  langpy_guide.md  stores_sdk_options.md  thread_sdk_options.md  user_guide.md  workflow_sdk_options.md
embed/: __init__.py  base.py  embed_full_copy.py  huggingface_async.py  openai_async.py
examples/: operators_guide.py  travel_agency.py
fabprimitives/: .cursorrules  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
fabprimitives/.github/workflows/: ci.yml
fabprimitives/agent/: __init__.py  agent_full_copy.py  async_agent.py  sync_agent.py
fabprimitives/chunker/: __init__.py  chunker_full_copy.py  settings.py
fabprimitives/docs/: CORE_API.md  EXTENSION_GUIDE.md  GAPS_AND_SOLUTIONS.md  agent_execution_flow.md  agent_sdk_options.md  agent_sdk_usage_guide.md  chunker_sdk_options.md  embed_sdk_options.md  langpy_guide.md  memory_sdk_options.md  pipe_sdk_options.md  stores_sdk_options.md  thread_sdk_options.md  user_guide.md
fabprimitives/embed/: __init__.py  base.py  embed_full_copy.py  huggingface_async.py  openai_async.py  sync_embed.py
fabprimitives/examples/: __init__.py
fabprimitives/examples/architectures/: __init__.py  prompt_chaining.py  tool_agent.py
fabprimitives/examples/primitives/: __init__.py  agent_example.py  chunker_example.py  embed_example.py  memory_example.py  parser_example.py  pipe_example.py  thread_example.py  tools_example.py  workflow_example.py
fabprimitives/langpy/: cli.py  post_install.py  setup_docs.py
fabprimitives/langpy/core/: __init__.py  context.py  pipeline.py  primitive.py
fabprimitives/langpy/primitives/: agent.py  chunker.py  embed.py  tools.py  workflow.py
fabprimitives/langpy/skills/: __init__.py  manager.py  models.py  parser.py
fabprimitives/langpy/testing/: mocks.py
fabprimitives/langpy_sdk/: README.md  __init__.py  agent.py  skill.py  workflow.py
fabprimitives/memory/: __init__.py  embedding_retry.py  memory_full_copy.py  memory_manager.py  models.py  sync_memory.py  upload_service.py
fabprimitives/parser/: Dockerfile  README.md  __init__.py  async_parser.py  docker-compose.yml  docling_parser.py  docling_parser_full_copy.py  fast_image_parser.py  fast_pdf_parser.py  mime_detection.py  models.py  parser_service.py  registry.py  requirements.txt  simple_parser.py  sync_parser.py  worker.py
fabprimitives/parser/parsers/: __init__.py  archive_parser.py  email_parser.py  image_parser.py  office_parser.py  pdf_parser.py  text_parser.py
fabprimitives/pipe/: __init__.py  async_pipe.py  pipe_full_copy.py  pipe_primitive.py  schema.py  sync_pipe.py
fabprimitives/pipe/adapters/: __init__.py  anthropic.py  gemini.py  groq.py  mistral.py  ollama.py  perplexity.py
fabprimitives/stores/: base.py
fabprimitives/tests/: __init__.py  test_chunker_debug.py  test_chunker_fix.py  test_chunker_with_real_doc.py  test_dimension_detection.py  test_dimension_fix.py  test_direct_import.py  test_docling_chunkers.py  test_docling_parser.py  test_external_streaming.py  test_full_copy.py  test_import_debug.py  test_memory_fix.py  test_memory_manager.py  test_memory_primitive.py  test_memory_with_files.py  test_multi_llm_streaming.py  test_optimized_ui.py  test_parser_sdk.py  test_pgvector_memory.py  test_pgvector_pdf.py  test_pgvector_simple.py  test_sdk_integration.py  test_simple_demo.py  test_simple_embed.py  test_simple_memory.py  test_streamlit_ui_fix.py  test_threaded_memory.py
fabprimitives/tests/agent/: test_agent_debug.py  test_agent_execution_flow.py  test_async_agent.py  test_streaming_agent.py  test_user_code.py
fabprimitives/tests/integration/: __init__.py
fabprimitives/tests/memory/: test_memory_resilience.py
fabprimitives/tests/parser/: comprehensive_test.py  generate_test_files.py  run_parser_ui.py  simple_test.py  test_all_formats.py  test_all_real_formats.py  test_dispatcher.py  test_format_support.py  test_image_speed.py  test_other_formats.py  test_parser.py  test_parser_fix.py  test_pdf_parse.py  test_real_formats.py  test_simple_parse.py
fabprimitives/tests/workflow/: test_langbase_parity.py
fabprimitives/thread/: async_thread.py  sync_thread.py
fabprimitives/workflow/: __main__.py  async_workflow.py  cli.py  core.py  dashboard.py  exceptions.py  logging.py  retry.py  run_registry.py  template_engine.py  workflow_full_copy_fixed.py
langpy/: __init__.py
langpy_sdk/: __init__.py  memory.py  pipe.py  skill.py  thread.py
memory/: async_memory.py  embedding_retry.py  filter_parser.py  memory_manager.py  upload_service.py
parser/: Dockerfile  README.md  __init__.py  async_parser.py  docker-compose.yml  fast_image_parser.py  fast_pdf_parser.py  mime_detection.py  models.py  parser_service.py  registry.py  requirements.txt  simple_parser.py  sync_parser.py  worker.py
pipe/: schema.py  store.py
stores/: memory_store.py
tests/: __init__.py  test_agent_pattern.py  test_chunker_debug.py  test_chunker_fix.py  test_chunker_with_real_doc.py  test_dimension_detection.py  test_dimension_fix.py  test_direct_import.py  test_docling_chunkers.py  test_docling_parser.py  test_external_streaming.py  test_full_copy.py  test_import_debug.py  test_memory_fix.py  test_memory_pipe_integration.py  test_memory_primitive.py  test_memory_with_files.py  (+12 more)
(+82 files in other folders)
