[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name = "langpy"
version = "0.2.2"
description = "A comprehensive AI agent framework with Langbase-style primitives and advanced capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LangPy Team", email = "team@langpy.dev"}
]
maintainers = [
    {name = "LangPy Team", email = "team@langpy.dev"}
]
keywords = ["ai", "agents", "llm", "langbase", "primitives", "workflows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    # Core framework (required)
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # LLM providers (minimal - OpenAI only by default)
    "openai>=1.0.0",

    # HTTP client (required)
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",

    # Async operations (required)
    "aiofiles>=23.0.0",

    # Data validation
    "jsonschema>=4.0.0",
    "PyYAML>=6.0.0",

    # Vector storage (minimal - FAISS only)
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",

    # Basic document parsing
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
# Additional LLM providers
providers = [
    "anthropic>=0.7.0",
    "mistralai>=0.0.10",
]

# PostgreSQL + pgvector support
postgres = [
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
]

# Web backend support
backend = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
]

# Advanced document parsing
parsing = [
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "docling>=0.0.1",
    "python-magic>=0.4.27",
]

# Dashboard/UI
ui = [
    "streamlit>=1.25.0",
    "plotly>=5.22.0",
]

# Development tools
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
]

# Documentation
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

# ML/AI features (HEAVY - only install if needed!)
ml = [
    "torch>=2.0.0",              # WARNING: 1.5GB download!
    "transformers>=4.30.0",      # WARNING: 500MB download!
    "sentence-transformers>=2.2.0",  # WARNING: 300MB download!
    "scikit-learn>=1.3.0",
]

# Full installation (includes everything - SLOW!)
full = [
    "langpy[providers,postgres,backend,parsing,ui,ml]",
]

# All extras
all = [
    "langpy[providers,postgres,backend,parsing,ui,dev,docs,ml]",
]

[project.urls]
Homepage = "https://github.com/langpy/langpy"
Documentation = "https://langpy.dev"
Repository = "https://github.com/langpy/langpy"
Issues = "https://github.com/langpy/langpy/issues"

[project.scripts]
langpy = "langpy.cli:main"
langpy-init = "langpy.cli:init_project"
langpy-setup-docs = "langpy.setup_docs:setup_docs"
langpy-post-install = "langpy.post_install:post_install"

[tool.setuptools.packages.find]
include = [
    "langpy*",
    "agent*",
    "analytics*",
    "auth*",
    "backend*",
    "chunker*",
    "embed*",
    "experiments*",
    "keysets*",
    "memory*",
    "parser*",
    "pipe*",
    "sdk*",
    "stores*",
    "thread*",
    "tools*",
    "versioning*",
    "workflow*",
]

[tool.setuptools.package-data]
"langpy" = ["docs/*.md", "docs/*.cursorrules", "docs/*.txt", "docs/__init__.py"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["langpy"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "anthropic.*",
    "mistralai.*",
    "pdfplumber.*",
    "docx.*",
    "bs4.*",
]
ignore_missing_imports = true 